Fix logo alignment

--- a/app/assets/stylesheets/themes/home_2.css.sass
+++ b/app/assets/stylesheets/themes/home_2.css.sass
@@ -168,6 +168,9 @@
       h1
         font:
           size: 90px
+        &:before
+          margin-right: 0
+          vertical-align: 8px
 
   // Screen > 1024px ////////////////////////////////////////////////////////////////////////////////////////////////////
 
